--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts-upgradeable": "^3.4.2",
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@rari-capital/solmate": "^6.2.0",
+    "@tenderly/hardhat-tenderly": "^1.3.2",
     "@typechain/ethers-v5": "^7.1.2",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.22",
